Add local testing environment with Makefile and expand dashboard to match official requirements
- Add .venv-local/ to .gitignore for isolated local testing
- Add Makefile with targets: test, local-env, test-local, demo-local, clean-local
- Add scripts for local environment setup and testing with PySpark
- Add pytest mode parameter (auto/local/cluster) and environment variables for configuration
- Add scoring_summary and data_availability tables to output schemas and config
- Add deadline_days column